--- a/HelloWorldMaven/pom.xml
+++ b/HelloWorldMaven/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.tibco.bw</groupId>
     <artifactId>HelloWorldMaven.parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../HelloWorldMaven.parent</relativePath>
+    <relativePath>HelloWorldMaven.parent</relativePath>
   </parent>
   <artifactId>HelloWorldMaven</artifactId>
   <packaging>bwear</packaging>
