--- a/HelloWorldMaven.parent/pom.xml
+++ b/HelloWorldMaven.parent/pom.xml
@@ -7,8 +7,8 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-    <module>../HelloWorldMaven.module</module>
-    <module>../HelloWorldMaven</module>
+    <module>HelloWorldMaven.module</module>
+    <module>HelloWorldMaven</module>
   </modules>
   <build>
     <plugins>
